--- a/src/main/resources/templates/search_index.html
+++ b/src/main/resources/templates/search_index.html
@@ -155,7 +155,7 @@
       z-index: -1;
     }
 
-    .message {
+    #message {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -165,7 +165,7 @@
       font-family: poppins;
     }
 
-    .messageDelete {
+    #messageDelete {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -185,15 +185,18 @@
 
   <div id="background"></div>
 
-  <div class="action_btn" style="margin: 0 auto; display: inline;">
-    <div id="message" class="message" th:text="${message}"></div>
-
-    <div id="messageDelete" class="messageDelete" th:text="${messageDelete}"></div>
-
-  </div>
 
   <div>
     <h1 th:text=" |Searched Movies for ${query} |"></h1>
+  </div>
+
+  <div th:if="${message != null}">
+    <div class="alert alert-success" style="width: 800px; margin: auto;" id="message" th:text="${message}" role="alert">
+    </div>
+  </div>
+
+  <div th:if="${messageDelete != null}">
+    <div id="messageDelete" class="alert alert-danger"  style="width: 800px; margin: auto;" th:text="${messageDelete}"></div>
   </div>
 
 
