--- a/src/main/resources/templates/movie_index.html
+++ b/src/main/resources/templates/movie_index.html
@@ -178,7 +178,7 @@
             z-index: -1;
         }
 
-        .message {
+        #message {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -188,7 +188,7 @@
             font-family: poppins;
         }
 
-        .messageDelete {
+        #messageDelete {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -205,12 +205,6 @@
 <div id="background"></div>
 
 
-<div class="action_btn" style="margin: 0 auto; display: inline;">
-    <div id="message" class="message" th:text="${message}"></div>
-
-    <div id="messageDelete" class="messageDelete" th:text="${messageDelete}"></div>
-
-</div>
 
 <div class="dropdown" style=" margin-top: 50px; margin-left: 50px;">
     <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -232,6 +226,16 @@
 
 
     <h1 th:text="|${genreName} Movies|"></h1>
+
+
+<div th:if="${message != null}">
+    <div class="alert alert-success" style="width: 800px; margin: auto;" id="message" th:text="${message}" role="alert">
+    </div>
+</div>
+
+<div th:if="${messageDelete != null}">
+    <div id="messageDelete" class="alert alert-danger"  style="width: 800px; margin: auto;" th:text="${messageDelete}"></div>
+</div>
 
 
 
