--- a/src/main/resources/templates/cart_index.html
+++ b/src/main/resources/templates/cart_index.html
@@ -64,7 +64,7 @@
       font-weight: bold;
     }
 
-    .message{
+    #message{
       display: flex;
       justify-content: center;
       align-items: center;
@@ -101,9 +101,13 @@
 
 <div th:unless="${movies == null}">
 
-  <div id="message" class="message" th:text="${message}"></div>
+  <div th:if="${message != null}">
 
-<div class="col-lg-9 col-md-9 col-sm-12" style="margin-left: 200px; margin-bottom: 50px;">
+    <div id="message" class="alert alert-danger"  style="width: 800px; margin: auto;" th:text="${message}"></div>
+
+  </div>
+
+<div class="col-lg-9 col-md-9 col-sm-12" style="margin-left: 200px; margin-bottom: 50px; margin-top: 50px">
   <div class="col-lg-12 col-sm-12">
   </div>
   <div class="col-lg-12 col-sm-12 hero-feature">
