--- a/src/main/resources/templates/videos.html
+++ b/src/main/resources/templates/videos.html
@@ -369,7 +369,8 @@
 
   .time-right {
     float: right;
-    color: #aaa;
+    color: black;
+    font-weight: bold;
   }
 
   .time-left {
@@ -408,13 +409,13 @@
 <div id="username-page">
   <div class="container-sm" style="width: 400px; height: 150px;  max-width:400px;
   width:100%;  position: fixed; background: black;
-  top:40%;
+  top:50%;
   left: 87.5%;
   transform: translate(-50%, -50%);  border-radius: 10px;
     border: 0.1px solid black;
     outline-style: solid;
     outline-color: darkred;">
-    <h3 class="title" style="color: white; display: flex; justify-content: center;align-items: center;font-weight: bold;font-family: poppins sans-serif;"  th:text="| The Live Chat Room for ${movieName} |">The Chatroom</h3>
+    <h5 class="title" style="color: white; display: flex; justify-content: center;align-items: center;font-weight: bold;font-family:'Poppins', sans-serif ;"  th:text="| The Live Chat Room for ${movieName} |">The Chatroom</h5>
     <form  id="usernameForm" name="usernameForm">
       <div class="form-group">
         <input type="hidden" id="name" th:value="${#ctx.session.loggedInUser.getUsername()}" placeholder="Username" autocomplete="off" class="form-control" />
@@ -437,7 +438,7 @@
   left: 87.5%;
   transform: translate(-50%, -50%);" >
     <div class="chat-header">
-      <h5 th:text="| Live Chat Room for ${movieName} |" style="color: white">Live Chat </h5>
+      <h5 th:text="| Live Chat Room for ${movieName} |" style="color: white; font-family:'Poppins', sans-serif ">Live Chat </h5>
     </div>
     <div class="connecting">
 
