--- a/src/main/resources/templates/favList.html
+++ b/src/main/resources/templates/favList.html
@@ -279,8 +279,8 @@
                             <a th:href="@{/writeReview(movieId=${movie.movieDb_id}, movieTitle=${movie.title})}">
                                 Write a Review
                             </a>
+                                <a th:href="@{/viewMovieByGenre(id=${movie.getGenreId()})}" th:text="${movie.getGenreName()}" class="badge badge-danger" style="background-color: #C41E3A; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px"  title="View More Movies on This Genre">Danger</a>
 
-                            <span class="badge text-bg-danger" style="background-color: black; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px" th:text="${movie.getGenreName()}"></span>
                             </div>
 
                         </div>
