--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -244,8 +244,7 @@
                                 <a th:href="@{/writeReview(movieId=${movie.id}, movieTitle=${movie.title})}">
                                     Write a Review
                                 </a>
-
-                                <span class="badge text-bg-danger" style="background-color: black; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px" th:text="${movie.getGenreName()}"></span>
+                                <a th:href="@{/viewMovieByGenre(id=${movie.getGenre_ids()[0]})}" th:text="${movie.getGenreName()}" class="badge badge-danger" style="background-color: #C41E3A; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px" title="View More Movies on This Genre">Danger</a>
                             </div>
 
                         </div>
