--- a/src/main/resources/templates/movie_recsGenre.html
+++ b/src/main/resources/templates/movie_recsGenre.html
@@ -257,8 +257,7 @@
                             </div>
 
                             <div class="action_btn" style="margin: 0 auto; display: inline; margin-top: 10px;">
-
-                                <span class="badge text-bg-danger" style="background-color: black; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px" th:text="${movie.getGenreName()}"></span>
+                                <a th:href="@{/viewMovieByGenre(id=${movie.getGenre_ids()[0]})}" th:text="${movie.getGenreName()}" class="badge badge-danger" style="background-color: #C41E3A; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px"  title="View More Movies on This Genre">Danger</a>
                             </div>
 
                         </div>
