Margin bottom added to login and signup page

--- a/src/main/resources/templates/user_indexSignUp.html
+++ b/src/main/resources/templates/user_indexSignUp.html
@@ -238,7 +238,7 @@
   </a>
 </div>
 
-<div class="container" style="height:1000px;">
+<div class="container" style="height:1000px; margin-bottom: 50px">
 
   <h1 class="header" style="align-items: center; font-family: poppins; font-weight: bold;">Register</h1>
 
