--- a/src/main/resources/templates/user_index.html
+++ b/src/main/resources/templates/user_index.html
@@ -241,7 +241,7 @@
   </a>
 </div>
 
-<div class="container" style="height:700px;">
+<div class="container" style="height:700px; margin-bottom: 100px">
 
   <h1 class="heading">Login</h1>
 
