--- a/src/main/resources/templates/registerSuccess.html
+++ b/src/main/resources/templates/registerSuccess.html
@@ -207,7 +207,7 @@
     <div class="price-row">
         <div class="price-col">
             <p>Standard</p>
-            <h3>£9.99<span>/ yearly</span></h3>
+            <h3>€9.99<span>/ yearly</span></h3>
             <ul>
                 <li>5 percent discount on purchased movies</li>
                 <li>A Yearly Subscription</li>
@@ -217,7 +217,7 @@
 
         <div class="price-col">
             <p>Premium</p>
-            <h3>£14.99<span>/ yearly</span></h3>
+            <h3>€14.99<span>/ yearly</span></h3>
             <ul>
                 <li>15 percent discount on purchased movies</li>
                 <li>A Yearly Subscription</li>
@@ -227,7 +227,7 @@
 
         <div class="price-col">
             <p>Student</p>
-            <h3>£4.99<span>/ yearly</span></h3>
+            <h3>€4.99<span>/ yearly</span></h3>
             <ul>
                 <li>5 percent discount on purchased movies</li>
                 <li>75 percent cheaper than Premium Plan</li>
