--- a/src/main/resources/templates/confirmationPaymentPage.html
+++ b/src/main/resources/templates/confirmationPaymentPage.html
@@ -111,7 +111,7 @@
     </li>
     <li>
       <h5>Total</h5>
-      <p th:text=" |£${totalPriceShopOrder} |"></p>
+      <p th:text=" |€${totalPriceShopOrder} |"></p>
     </li>
     <li>
       <h5>Payment method</h5>
