--- a/src/main/resources/templates/store_index.html
+++ b/src/main/resources/templates/store_index.html
@@ -219,7 +219,7 @@
 
 
 <form class="d-flex" role="search" method="get" action="/viewMovieProductBySearch">
-    <input class="form-control me-2" type="search" placeholder="Enter movie name here" aria-label="Search" id="query" name="query" style="width:250px; margin-left: 1350px">
+    <input class="form-control me-2" type="search" placeholder="Enter movie item name here" aria-label="Search" id="query" name="query" style="width:250px; margin-left: 1350px">
     <button class="btn btn-danger" type="submit">Search</button>
 </form>
 
@@ -235,7 +235,7 @@
         </div>
         <h4 th:text="${movieProduct.movie_name}"></h4>
         <div>
-            <span th:text="|£${movieProduct.listPrice} |" style="font-weight: bold; color: white"></span>
+            <span th:text="|€${movieProduct.listPrice} |" style="font-weight: bold; color: white"></span>
             <button title="Add To Cart"><a th:href="@{/addCartItem(movieId=${movieProduct.getMovie_id()})}"><i class="fa fa-shopping-cart"></i></a></button>
         </div>
     </div>
