--- a/src/main/resources/templates/subscriptionConfirmPayment.html
+++ b/src/main/resources/templates/subscriptionConfirmPayment.html
@@ -111,7 +111,7 @@
     </li>
     <li>
       <h5>Total</h5>
-      <p th:text=" |£${subPrice} |"></p>
+      <p th:text=" |€${subPrice} |"></p>
     </li>
     <li>
       <h5>Payment method</h5>
