--- a/src/main/resources/templates/searchMovie_index.html
+++ b/src/main/resources/templates/searchMovie_index.html
@@ -250,11 +250,16 @@
             <div class="action_btn" style="margin: 0 auto; display: inline;">
               <a th:href="@{/getAllChatMessage(id=${movieByGenre.getId()})}">View Videos & Live Chat Room</a>
 
-              <a th:href="@{/addMovieFavList3(movieId=${movieByGenre.getId()}, backdrop_path=${movieByGenre.getBackdrop_path()}, overview=${movieByGenre.getOverview()}, title=${movieByGenre.getTitle()}, release_date=${movieByGenre.getRelease_date()})}"
+              <a th:href="@{/addMovieFavList3(movieId=${movieByGenre.getId()}, backdrop_path=${movieByGenre.getBackdrop_path()}, overview=${movieByGenre.getOverview()}, title=${movieByGenre.getTitle()}, genreId=${movieByGenre.getGenre_ids()[0]})}"
                  class="remove_cart" rel="2">
                 <i class="fa fa-heart" th:style="${movieByGenre.isFavourite() == true} ? 'color: red' : 'color: black'"></i>
               </a>
             </div>
+
+            <div class="action_btn" style="margin: 0 auto; display: inline; margin-top: 0.5px;">
+              <a th:href="@{/viewMovieByGenre(id=${movieByGenre.getGenre_ids()[0]})}" th:text="${movieByGenre.getGenreName()}" class="badge badge-danger" style="background-color: #C41E3A; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px" title="View More Movies on This Genre">Danger</a>
+            </div>
+
           </div>
         </div>
       </div>
