Verify login html added

--- a/src/main/resources/templates/verifyLogin.html
+++ b/src/main/resources/templates/verifyLogin.html
@@ -96,7 +96,7 @@
 <h2>ScreenSafari</h2>
 
 <div class="container">
-    <h1 class="mb-4" style="font-family: poppins; font-size: 36px; font-weight: bold; color: black;">OTP Verification</h1>
+    <h1 class="mb-4" style="font-family: poppins; font-size: 36px; font-weight: bold; color: black;">Login Verification</h1>
 
     <form th:action="@{/verifyLogin}" method="post">
         <label for="number">Enter the number sent to your email:</label>
