--- a/src/main/resources/templates/search_index.html
+++ b/src/main/resources/templates/search_index.html
@@ -212,10 +212,14 @@
               <div class="action_btn" style="margin: 0 auto; display: inline;">
                 <a th:href="@{/getAllChatMessage(id=${movie.getId()})}">View Videos & Live Chat Room</a>
 
-                <a th:href="@{/addMovieFavList4(movieId=${movie.getId()}, backdrop_path=${movie.getBackdrop_path()}, overview=${movie.getOverview()}, title=${movie.getTitle()}, release_date=${movie.getRelease_date()})}"
+                <a th:href="@{/addMovieFavList4(movieId=${movie.getId()}, backdrop_path=${movie.getBackdrop_path()}, overview=${movie.getOverview()}, title=${movie.getTitle()}, genreId=${movie.getGenre_ids()[0]})}"
                    class="remove_cart" rel="2">
                   <i class="fa fa-heart" th:style="${movie.isFavourite() == true} ? 'color: red' : 'color: black'"></i>
                 </a>
+              </div>
+
+              <div class="action_btn" style="margin: 0 auto; display: inline; margin-top: 0.5px;">
+                <a th:href="@{/viewMovieByGenre(id=${movie.getGenre_ids()[0]})}" th:text="${movie.getGenreName()}" class="badge badge-danger" style="background-color: #C41E3A; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px" title="View More Movies on This Genre">Danger</a>
               </div>
             </div>
           </div>
