CSS changes for live chat room

--- a/src/main/resources/templates/videos.html
+++ b/src/main/resources/templates/videos.html
@@ -409,7 +409,7 @@
 <div id="username-page">
   <div class="container-sm" style="width: 400px; height: 150px;  max-width:400px;
   width:100%;  position: fixed; background: black;
-  top:50%;
+  top:60%;
   left: 87.5%;
   transform: translate(-50%, -50%);  border-radius: 10px;
     border: 0.1px solid black;
@@ -434,11 +434,11 @@
 <div id="chat-page" class="hidden">
   <div class="container" style="width: 400px; height: 500px;  max-width:400px;
   width:100%;  position: fixed;
-  top: 80%;
+  top: 90%;
   left: 87.5%;
   transform: translate(-50%, -50%);" >
     <div class="chat-header">
-      <h5 th:text="| Live Chat Room for ${movieName} |" style="color: white; font-family:'Poppins', sans-serif ">Live Chat </h5>
+      <h5 th:text="| Live Chat Room for ${movieName} |" style="color: white; font-weight: bold; font-family:'Poppins', sans-serif ">Live Chat </h5>
     </div>
     <div class="connecting">
 
