--- a/src/main/resources/static/css/chatIndex.css
+++ b/src/main/resources/static/css/chatIndex.css
@@ -44,17 +44,23 @@
     text-align: center;
 }
 
+
+
 .container {
     background: black;
     box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);
-    width: 500px;
+    /*width: 500px;
     height: 300px;
+
+     */
     display: inline-block;
     margin-top: 42px;
     vertical-align: middle;
     padding: 35px 55px 35px;
     min-height: 250px;
-    top: 50%;
+    /*top: 50%;
+
+     */
     /*left: 1000px;
 
      */
@@ -69,6 +75,13 @@
     border: 0.1px solid black;
     outline-style: solid;
     outline-color: darkred;
+
+
+    width: 400px; height: 500px;  max-width:400px;
+    width:100%;  position: fixed;
+    top: 90%;
+    left: 87.5%;
+    transform: translate(-50%, -50%);
 }
 
 #chat-page ul {
