Set allowed origins added to web sockets, and some css changes

--- a/src/main/resources/templates/updateToAdmin.html
+++ b/src/main/resources/templates/updateToAdmin.html
@@ -40,16 +40,16 @@
       color: white;
       font-weight: bold;
       -webkit-text-stroke: 1px darkred;
-      font-family: poppins;
+      font-family: Poppins sans-serif;
     }
 
     p{
-      font-family: Poppins;
+      font-family: Poppins sans-serif;
     }
 
 
     table {
-      font-family: poppins;
+      font-family: Poppins sans-serif;
       border-collapse: collapse;
       width: 50%;
       margin-top: 150px;
@@ -83,7 +83,7 @@
       color: white;
       font-weight: bold;
       -webkit-text-stroke: 1px darkred;
-      font-family: poppins;
+      font-family: Poppins sans-serif;
     }
 
     .movieImage{
@@ -109,7 +109,7 @@
 
     p.two{
       color: black;
-      font-family: poppins;
+      font-family: Poppins sans-serif;
     }
 
     p.two:visited {color:#0000ff;}
@@ -129,7 +129,7 @@
       color: green;
       font-weight: bold;
       margin-bottom: 50px;
-      font-family: poppins;
+      font-family: Poppins sans-serif;
     }
   </style>
 
