--- a/src/main/resources/templates/videos.html
+++ b/src/main/resources/templates/videos.html
@@ -80,7 +80,7 @@
       color: white;
       font-weight: bold;
       -webkit-text-stroke: 1px darkred;
-      font-family: poppins;
+      font-family: Poppins sans-serif;
     }
 
 
