--- a/src/main/resources/templates/subscriptionConfirmPayment2.html
+++ b/src/main/resources/templates/subscriptionConfirmPayment2.html
@@ -64,14 +64,14 @@
 
     p, label, input, option, select{
 
-      font-family: poppins;
+      font-family: Poppins sans-serif;
       font-size: 15px;
       font-weight: bold;
       color: white;
     }
 
     h3, h5{
-      font-family: poppins;
+      font-family: Poppins sans-serif;
       font-weight: bold;
       color: white;
     }
@@ -84,7 +84,7 @@
       color: black;
       font-weight: bold;
       -webkit-text-stroke: 1px darkred;
-      font-family: poppins;
+      font-family: Poppins sans-serif;
     }
 
   </style>
