--- a/src/main/resources/templates/user_index.html
+++ b/src/main/resources/templates/user_index.html
@@ -38,7 +38,7 @@
       color: black;
       font-weight: bold;
       -webkit-text-stroke: 1px darkred;
-      font-family: poppins;
+      font-family: Poppins sans-serif;
 
     }
 
@@ -120,7 +120,7 @@
       cursor: pointer;
       color:black;
       font-weight: bold;
-      font-family: poppins;
+      font-family: Poppins sans-serif;
     }
 
     p, .login{
@@ -200,7 +200,7 @@
       color: white;
       font-weight: bold;
       -webkit-text-stroke: 1px darkred;
-      font-family: poppins;
+      font-family: Poppins sans-serif;
     }
 
     p, label, input, span{
