Similar movies method added to all pages where movies are

--- a/src/main/resources/templates/search_index.html
+++ b/src/main/resources/templates/search_index.html
@@ -220,6 +220,10 @@
 
               <div class="action_btn" style="margin: 0 auto; display: inline; margin-top: 0.5px;">
                 <a th:href="@{/viewMovieByGenre(id=${movie.getGenre_ids()[0]})}" th:text="${movie.getGenreName()}" class="badge badge-danger" style="background-color: #C41E3A; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px" title="View More Movies on This Genre">Danger</a>
+
+                <a th:href="@{/viewSimilar(movieId=${movie.id})}" class="badge badge-danger" style="background-color: black; color: white; font-weight: bold;  border-radius: 50px; margin-left: 5px" title="View More Movies Like This">
+                  Similar
+                </a>
               </div>
             </div>
           </div>
