--- a/src/main/resources/templates/favList.html
+++ b/src/main/resources/templates/favList.html
@@ -281,6 +281,9 @@
                             </a>
                                 <a th:href="@{/viewMovieByGenre(id=${movie.getGenreId()})}" th:text="${movie.getGenreName()}" class="badge badge-danger" style="background-color: #C41E3A; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px"  title="View More Movies on This Genre">Danger</a>
 
+                                <a th:href="@{/viewSimilar(movieId=${movie.getMovieDb_id()})}" class="badge badge-danger" style="background-color: black; color: white; font-weight: bold;  border-radius: 50px; margin-left: 5px" title="View More Movies Like This">
+                                    Similar
+                                </a>
                             </div>
 
                         </div>
