--- a/src/main/resources/templates/movie_index.html
+++ b/src/main/resources/templates/movie_index.html
@@ -262,6 +262,10 @@
                                 Write a Review
                             </a>
                             <a th:text="${movieByGenre.getGenreName()}" class="badge badge-danger" style="background-color: #C41E3A; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px"  title="View More Movies on This Genre">Danger</a>
+
+                            <a th:href="@{/viewSimilar(movieId=${movieByGenre.id})}" class="badge badge-danger" style="background-color: black; color: white; font-weight: bold;  border-radius: 50px; margin-left: 5px" title="View More Movies Like This">
+                                Similar
+                            </a>
                         </div>
                     </div>
                 </div>
