--- a/src/main/resources/templates/movieProductSearch.html
+++ b/src/main/resources/templates/movieProductSearch.html
@@ -222,7 +222,11 @@
     <button class="btn btn-danger" type="submit">Search</button>
 </form>
 
-
+<form class="d-flex" role="filter" method="get" action="/priceFilter">
+    <input class="form-control me-2" type="number" step="1" placeholder="Min Price" name="minPrice" style="width:150px; margin-right:1350px">
+    <input class="form-control me-2" type="number" step="1" placeholder="Max Price" name="maxPrice" style="width:150px; margin-right:1350px">
+    <button class="btn btn-danger" type="submit">Filter</button>
+</form>
 
 <div class="wrapper">
     <div th:each="movieProduct : ${movieBySearch}">
