--- a/src/main/resources/templates/priceFilter.html
+++ b/src/main/resources/templates/priceFilter.html
@@ -235,7 +235,7 @@
             <h4 th:text="${movieProduct.movie_name}"></h4>
             <div>
                 <span th:text="|€${movieProduct.listPrice} |" style="font-weight: bold; color: white"></span>
-                <button title="Add To Cart"><a th:href="@{/addCartItemMovieProductSearch(movieId=${movieProduct.getMovie_id()})}"><i class="fa fa-shopping-cart"></i></a></button>
+                <button title="Add To Cart"><a th:href="@{/addToCartFiltering(movieId=${movieProduct.getMovie_id()})}"><i class="fa fa-shopping-cart"></i></a></button>
             </div>
         </div>
     </div>
