button added to dropdown to take you to movie revenue page

--- a/src/main/resources/templates/revenue.html
+++ b/src/main/resources/templates/revenue.html
@@ -78,6 +78,7 @@
     <ul class="dropdown-menu" style=" box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)">
         <li><a class="three" th:href="@{/adminPanelStats}" style="text-decoration:none"><p class="two">Movies deleted from users cart</p></a></li>
         <li><a class="three" th:href="@{/revenue}" style="text-decoration:none"><p class="two">Revenue Chart</p></a></li>
+        <li><a class="three" th:href="@{/movieRevenueStats}" style="text-decoration:none"><p class="two">Movie Revenue Chart</p></a></li>
     </ul>
 </div>
 
@@ -149,3 +150,5 @@
         });
     });
 </script>
+</body>
+</html>
